--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
                   </execution>
               </executions>
           </plugin>
+
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-release-plugin</artifactId>
+              <version>2.5.2</version>
+          </plugin>
       </plugins>
     </build>
 
