--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.jxls</groupId>
     <artifactId>jxls-jexcel</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>jxls-jexcel</name>
     <url>http://jxls.sf.net</url>
 
@@ -16,11 +16,11 @@
         <gmavenProviderSelection>2.0</gmavenProviderSelection>
         <groovyVersion>2.0.0</groovyVersion>
         <spockVersion>1.0-groovy-2.4</spockVersion>
+        <jxlsVersion>2.0.0</jxlsVersion>
     </properties>
 
     <build>
-      <plugins>
-
+        <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.jxls</groupId>
             <artifactId>jxls</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>${jxlsVersion}</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.jexcelapi</groupId>
@@ -130,4 +130,11 @@
         </site>
     </distributionManagement>
 
+    <repositories>
+        <repository>
+            <id>jxls.releases</id>
+            <name>Jxls repo at Sourceforge</name>
+            <url>http://jxls.sourceforge.net/repository/releases/</url>
+        </repository>
+    </repositories>
 </project>
