updated config for release plugin

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
     </scm>
 
     <build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh</artifactId>
+                <version>2.9</version>
+            </extension>
+        </extensions>
+        
         <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
