--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jxls</groupId>
     <artifactId>jxls-jexcel</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>jxls-jexcel</name>
     <url>http://jxls.sf.net</url>
 
@@ -20,7 +18,7 @@
 
     <scm>
         <developerConnection>scm:git:https://bitbucket.org/leonate/jxls-jexcel.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>r1.0.0</tag>
     </scm>
 
     <build>
